@@ -51,6 +51,14 @@ org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
 The release of Horizon 34 will be the last version which supports reading and writing timeseries data using JRobin.
 The JRobin library and the JRobin timeseries strategy will be removed from Horizon 35+ moving forward.
 
+== Deprecation of Tl1d
+We removed Tl1d service from service configuration. We believe none of our users are using this service. The code will be
+removed in the next Horizon version 35.
+
+== Deprecation of AsteriskGateway
+We removed AsteriskGateway service from service configuration. We believe none of our users are using this service. The code will be
+removed in the next Horizon version 35.
+
 === OpenNMS Minion environment variables changes
 The OpenNMS Minion Docker container no longer uses the KAFKA_SINK, KAFKA_RPC and KAFKA_TWIN prefixes to configure Kafka.
 Instead, only the KAFKA_IPC prefix is used, which ensures that all Kafka-related settings are set correctly for all features and that ActiveMQ is no longer installed incorrectly.
